# tauri-plugin-tcp

./: Cargo.toml  README.md  build.rs  package.json
examples/tauri-app-svelte/src-tauri/capabilities/: default.json
examples/tauri-app-svelte/src/routes/: +page.svelte
examples/tauri-app-vue/: package.json
examples/tauri-app-vue/src/: Main.vue
examples/tauri-app-vue/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app-vue/src-tauri/capabilities/: default.json
examples/tauri-app-vue/src-tauri/src/: lib.rs
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/routes/: +page.svelte
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  models.rs  platform.rs
webview-src/: index.ts
